fix l'overflow

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -278,7 +278,6 @@ input {
     background-blend-mode: overlay;
     background-clip: unset;
     position: relative;
-    overflow: hidden;
 }
 
 .bg-game {
